# Web-GSF-Player

./: CMakeLists.txt  README.md
docs/: gsf2wav.js  gsf2wav.wasm  index.html
lazygsf/: CMakeLists.txt
lazygsf/mgba/: CMakeLists.txt
